--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://public.tableau.com/app/profile/sameer.chawla/viz/COVIDAnalysis_17072722716550/Dashboard1"></a>Tableau Project</h2>
+										<h2><a href="https://public.tableau.com/app/profile/sameer.chawla/viz/COVIDAnalysis_17072722716550/Dashboard1">Tableau Project</a></h2>
 									</header>
 									<a href="https://public.tableau.com/app/profile/sameer.chawla/viz/COVIDAnalysis_17072722716550/Dashboard1" class="image fit"><img src="images/tableau.jpg" alt="" /></a>
 								    <p>Analysis of COVID 19 data in Tableau</p>	
