--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="#">Data Cleaning in SQL</a></h2>
+									<h2><a href="https://github.com/c-sameer/DataAnalystPortfolio/blob/main/NashVilleHousing.sql">Data Cleaning in SQL</a></h2>
 									<p>In this project we clean housing data in SQL Server</p>
 								</header>
-								<a href="#" class="image main"><img src="images/houses.jpg" alt="" /></a>
+								<a href="https://github.com/c-sameer/DataAnalystPortfolio/blob/main/NashVilleHousing.sql" class="image main"><img src="images/houses.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">View Project</a></li>
+									<li><a href="https://github.com/c-sameer/DataAnalystPortfolio/blob/main/NashVilleHousing.sql" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
