--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="#">Data Exploration in SQL</a></h2>
+										<h2><a href="https://github.com/c-sameer/DataAnalystPortfolio/blob/main/COVID19_ExploratoryDataAnalysis.sql">Data Exploration in SQL</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/COVID.jpg" alt="" /></a>
+									<a href="https://github.com/c-sameer/DataAnalystPortfolio/blob/main/COVID19_ExploratoryDataAnalysis.sql" class="image fit"><img src="images/COVID.jpg" alt="" /></a>
 									<p>Data Exploration of COVID 19 dataset in Postgres Server</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
+										<li><a href="https://github.com/c-sameer/DataAnalystPortfolio/blob/main/COVID19_ExploratoryDataAnalysis.sql" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
