FIFA World Cup changes
Added the FIFA world cup initial commit

--- a/index.html
+++ b/index.html
@@ -78,6 +78,16 @@
 										<li><a href="https://public.tableau.com/app/profile/sameer.chawla/viz/COVIDAnalysis_17072722716550/Dashboard1" class="button">View Project</a></li>
 									</ul>
 								</article>
+								<article>
+									<header>
+										<h2><a href="https://github.com/c-sameer/DataAnalystPortfolio/blob/main/FIFA_Data_Cleaning_Exploration.ipynb">Data Cleaning and Exploration in Python</a></h2>
+									</header>
+									<a href="https://github.com/c-sameer/DataAnalystPortfolio/blob/main/FIFA_Data_Cleaning_Exploration.ipynb" class="image fit"><img src="images/tableau.jpg" alt="" /></a>
+								    <p>Analysis of FIFA world cup players in Python in Jupyter notebook using the dataset from Kaggle</p>	
+									<ul class="actions special">
+										<li><a href="https://github.com/c-sameer/DataAnalystPortfolio/blob/main/FIFA_Data_Cleaning_Exploration.ipynb" class="button">View Project</a></li>
+									</ul>
+								</article>
 							</section>
 					</div>
 
