--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 									<header>
 										<h2><a href="https://github.com/c-sameer/DataAnalystPortfolio/blob/main/FIFA_Data_Cleaning_Exploration.ipynb">Data Cleaning and Exploration in Python</a></h2>
 									</header>
-									<a href="https://github.com/c-sameer/DataAnalystPortfolio/blob/main/FIFA_Data_Cleaning_Exploration.ipynb" class="image fit"><img src="images/tableau.jpg" alt="" /></a>
+									<a href="https://github.com/c-sameer/DataAnalystPortfolio/blob/main/FIFA_Data_Cleaning_Exploration.ipynb" class="image fit"><img src="images/fifa_wallpaper-1298835516.jpg" alt="" /></a>
 								    <p>Analysis of FIFA world cup players in Python in Jupyter notebook using the dataset from Kaggle</p>	
 									<ul class="actions special">
 										<li><a href="https://github.com/c-sameer/DataAnalystPortfolio/blob/main/FIFA_Data_Cleaning_Exploration.ipynb" class="button">View Project</a></li>
