Adding SQL and Tableau tabs

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">Projects</a></li>
+							<li class="active"><a href="index.html">Python</a></li>
+							<li><a href="SQL.html">SQL</a></li>
+							<li><a href="Tableau.html">Tableau</a></li>							
 						</ul>
 						<ul class="icons">
 							<li><a href="https://github.com/c-sameer" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
@@ -44,38 +46,16 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- Featured Post -->
-							<article class="post featured">
-								<header class="major">
-									<h2><a href="https://github.com/c-sameer/DataAnalystPortfolio/blob/main/NashVilleHousing.sql">Data Cleaning in SQL</a></h2>
-									<p>In this project we clean housing data in SQL Server</p>
-								</header>
-								<a href="https://github.com/c-sameer/DataAnalystPortfolio/blob/main/NashVilleHousing.sql" class="image main"><img src="images/houses.jpg" alt="" /></a>
-								<ul class="actions special">
-									<li><a href="https://github.com/c-sameer/DataAnalystPortfolio/blob/main/NashVilleHousing.sql" class="button large">View Project</a></li>
-								</ul>
-							</article>
-
 						<!-- Posts -->
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="https://github.com/c-sameer/DataAnalystPortfolio/blob/main/COVID19_ExploratoryDataAnalysis.sql">Data Exploration in SQL</a></h2>
+										<h2><a href="https://github.com/c-sameer/DataAnalystPortfolio/blob/main/Airbnb_Datasetcleaning_Exploration.ipynb">Data Cleaning and Data Exploration in Python</a></h2>
 									</header>
-									<a href="https://github.com/c-sameer/DataAnalystPortfolio/blob/main/COVID19_ExploratoryDataAnalysis.sql" class="image fit"><img src="images/COVID.jpg" alt="" /></a>
-									<p>Data Exploration of COVID 19 dataset in Postgres Server</p>
+									<a href="https://github.com/c-sameer/DataAnalystPortfolio/blob/main/Airbnb_Datasetcleaning_Exploration.ipynb" class="image fit"><img src="images/Airbnb.jpg" alt="" /></a>
+								    <p>Data cleaning and Exploration of Airbnb data set</p>	
 									<ul class="actions special">
-										<li><a href="https://github.com/c-sameer/DataAnalystPortfolio/blob/main/COVID19_ExploratoryDataAnalysis.sql" class="button">View Project</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2><a href="https://public.tableau.com/app/profile/sameer.chawla/viz/COVIDAnalysis_17072722716550/Dashboard1">Tableau Project</a></h2>
-									</header>
-									<a href="https://public.tableau.com/app/profile/sameer.chawla/viz/COVIDAnalysis_17072722716550/Dashboard1" class="image fit"><img src="images/tableau.jpg" alt="" /></a>
-								    <p>Analysis of COVID 19 data in Tableau</p>	
-									<ul class="actions special">
-										<li><a href="https://public.tableau.com/app/profile/sameer.chawla/viz/COVIDAnalysis_17072722716550/Dashboard1" class="button">View Project</a></li>
+										<li><a href="https://github.com/c-sameer/DataAnalystPortfolio/blob/main/Airbnb_Datasetcleaning_Exploration.ipynb" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
@@ -83,7 +63,7 @@
 										<h2><a href="https://github.com/c-sameer/DataAnalystPortfolio/blob/main/FIFA_Data_Cleaning_Exploration.ipynb">Data Cleaning and Exploration in Python</a></h2>
 									</header>
 									<a href="https://github.com/c-sameer/DataAnalystPortfolio/blob/main/FIFA_Data_Cleaning_Exploration.ipynb" class="image fit"><img src="images/fifa_wallpaper-1298835516.jpg" alt="" /></a>
-								    <p>Analysis of FIFA world cup players in Python in Jupyter notebook using the dataset from Kaggle</p>	
+								    <p>Data cleaning and Exploration of FIFA world cup players in Python in Jupyter notebook using the dataset from Kaggle</p>	
 									<ul class="actions special">
 										<li><a href="https://github.com/c-sameer/DataAnalystPortfolio/blob/main/FIFA_Data_Cleaning_Exploration.ipynb" class="button">View Project</a></li>
 									</ul>
@@ -92,7 +72,6 @@
 					</div>
 
 				<!-- Footer -->
-					</footer>
 
 				<!-- Copyright -->
 					<div id="copyright">
